@@ -105,29 +105,30 @@ t/MARC-Convert-Wikidata-Object/05-authors_of_afterword.t
 t/MARC-Convert-Wikidata-Object/06-authors_of_introduction.t
 t/MARC-Convert-Wikidata-Object/07-compilers.t
 t/MARC-Convert-Wikidata-Object/08-cover.t
-t/MARC-Convert-Wikidata-Object/09-cycles.t
-t/MARC-Convert-Wikidata-Object/10-directors.t
-t/MARC-Convert-Wikidata-Object/11-dml.t
-t/MARC-Convert-Wikidata-Object/11-end_time.t
-t/MARC-Convert-Wikidata-Object/12-edition_number.t
-t/MARC-Convert-Wikidata-Object/13-editors.t
-t/MARC-Convert-Wikidata-Object/14-external_ids.t
-t/MARC-Convert-Wikidata-Object/15-full_name.t
-t/MARC-Convert-Wikidata-Object/16-illustrators.t
-t/MARC-Convert-Wikidata-Object/17-isbns.t
-t/MARC-Convert-Wikidata-Object/18-issn.t
-t/MARC-Convert-Wikidata-Object/19-krameriuses.t
-t/MARC-Convert-Wikidata-Object/20-languages.t
-t/MARC-Convert-Wikidata-Object/21-narrators.t
-t/MARC-Convert-Wikidata-Object/22-number_of_pages.t
-t/MARC-Convert-Wikidata-Object/23-photographers.t
-t/MARC-Convert-Wikidata-Object/24-publication_date.t
-t/MARC-Convert-Wikidata-Object/25-publishers.t
-t/MARC-Convert-Wikidata-Object/26-series.t
-t/MARC-Convert-Wikidata-Object/27-start_time.t
-t/MARC-Convert-Wikidata-Object/28-subtitles.t
-t/MARC-Convert-Wikidata-Object/29-title.t
-t/MARC-Convert-Wikidata-Object/30-translators.t
+t/MARC-Convert-Wikidata-Object/09-covers.t
+t/MARC-Convert-Wikidata-Object/10-cycles.t
+t/MARC-Convert-Wikidata-Object/11-directors.t
+t/MARC-Convert-Wikidata-Object/12-dml.t
+t/MARC-Convert-Wikidata-Object/12-end_time.t
+t/MARC-Convert-Wikidata-Object/13-edition_number.t
+t/MARC-Convert-Wikidata-Object/14-editors.t
+t/MARC-Convert-Wikidata-Object/15-external_ids.t
+t/MARC-Convert-Wikidata-Object/16-full_name.t
+t/MARC-Convert-Wikidata-Object/17-illustrators.t
+t/MARC-Convert-Wikidata-Object/18-isbns.t
+t/MARC-Convert-Wikidata-Object/19-issn.t
+t/MARC-Convert-Wikidata-Object/20-krameriuses.t
+t/MARC-Convert-Wikidata-Object/21-languages.t
+t/MARC-Convert-Wikidata-Object/22-narrators.t
+t/MARC-Convert-Wikidata-Object/23-number_of_pages.t
+t/MARC-Convert-Wikidata-Object/24-photographers.t
+t/MARC-Convert-Wikidata-Object/25-publication_date.t
+t/MARC-Convert-Wikidata-Object/26-publishers.t
+t/MARC-Convert-Wikidata-Object/27-series.t
+t/MARC-Convert-Wikidata-Object/28-start_time.t
+t/MARC-Convert-Wikidata-Object/29-subtitles.t
+t/MARC-Convert-Wikidata-Object/30-title.t
+t/MARC-Convert-Wikidata-Object/31-translators.t
 xt/MARC-Convert-Wikidata-Object-ExternalId/01-pod_coverage.t
 xt/MARC-Convert-Wikidata-Object-ExternalId/02-pod.t
 xt/MARC-Convert-Wikidata-Object-ISBN/01-pod_coverage.t
