@@ -1,4 +1,6 @@
 0.13
+ - API change: Add 'covers' parameter.
+ - Parameter 'cover' is deprecated.
 
 0.12 2025-03-30T15:12:57+02:00
  - API change: Add 'edition_of_work' parameter to Object.
